fix(Header): icon margins according to mobile menu alignments.

--- a/resource-reservation/src/components/header/header.css
+++ b/resource-reservation/src/components/header/header.css
@@ -1,7 +1,7 @@
 /* Header */
 
 .main-header {
-    background: red;
+    background: #f1f1f1;
     width: 100vw;
     height: 60px;
     padding-left: 250px;
@@ -10,7 +10,6 @@
     top: 0;
     box-sizing: border-box;
     border: none;
-    box-shadow: 0px 1px 50px grey;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -21,8 +20,10 @@
 }
 
 .main-header .profile-menu {
+    color: #212121;
     margin-right: 50px;
     font-size: 22px;
+    cursor: pointer;
 }
 
 .main-header .profile-menu i {
@@ -38,8 +39,11 @@
 .main-header .input-header input {
     width: 100%;
     height: 100%;
-    border: none;
-    border-radius: 10px;
+    border: 1px solid #212121;
+    border-radius: 8px;
+    outline-style: none;
+    padding: 0 15px;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
@@ -59,11 +63,18 @@
         justify-content: space-between;
     }
     .main-header .profile-menu {
-       margin-right: 15px;
+       margin-right: 11px;
        margin-left: 15px;
        font-size: 22px;
     }
     .main-header .profile-menu label {
         display: none;
+    }
+
+    .main-header .profile-menu i {
+        border: 2px solid #212121;
+        padding: 4px;
+        border-radius: 8px;
+        box-sizing: border-box;       
     }
 }
