--- a/resource-reservation/src/components/sidebar/sidebar.css
+++ b/resource-reservation/src/components/sidebar/sidebar.css
@@ -78,7 +78,7 @@ ul li:hover p {
 }
 
 .burger div {
-    width: 30px;
+    width: 25px;
     height: 5px;
     background-color: #3b3b3b;
     margin: 4px;
